Added Products Endpoint to Swagger
